# ai_gen_labor_exchange

./: LICENSE  orm_generator.py  repos_generator.py
ai_generated_data/: generated_orm_result.json  generated_repos_result.json
ai_init_data/: class_analyzer.py  code_generator.py
ai_init_data/dbml/: dbml.txt
ai_init_data/domain/: domain.json
ai_init_data/interfaces/: bases.json  interfaces.json
ai_init_data/orm/: orm_models.txt
ai_init_data/prompt_data/: base_prompt_data.py  orm_prompt.py  repository_prompt.py
ai_init_data/user_story/: user_story.md
src/: .env  .env.test  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/config/: app_config.py
src/models/domain/: aggregate_roots.py  entities.py  value_objects.py
src/repositories/: applicant_repository.py  company_repository.py
src/storage/sqlalchemy/migrations/: env.py
src/storage/sqlalchemy/migrations/versions/: 2025_05_06_1221-99d79d4dd38e_generated_tables.py  2025_05_06_1736-b99bf4b6ae34_generated_tables.py
src/storage/sqlalchemy/tables/: job.py  response.py  user.py
