[tool.poetry]
name = "labor-exchange"
version = "0.1.0"
description = ""
authors = ["gpn_team"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.0"
dependency-injector = "^4.41.0"
pre-commit = "^4.0.1"
python-json-logger = "^2.0.7"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.0"